property file update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
+spring.data.mongodb.uri=mongodb+srv://root:admin@sbi-t1fkj.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.database=test
